[package]
name = "pow-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
anyhow = "1"
bytes = "1"
eyre = "0.6.8"
futures = "0.3"
post-rs = { path = "../" }
randomx-rs = { git = "https://github.com/spacemeshos/randomx-rs", rev = "6f2bf32af7219a5f9ae929c3020242ecc7c6dd6a" }
rayon = "1.6.1"
serde_with = { version = "3.8.1", features = ["hex"] }
serde = { version = "1.0.89", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0.64", default-features = false, features = [
    "alloc",
] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
log = "0.4.17"
tokio = { version = "1.35.0", features = ["full"] }
num_cpus = "1.16.0"
clap = { version = "4.4.11", features = ["derive", "string"] }
env_logger = "0.11.1"
ureq = { version = "2.9.1", features = ["json"] }
gethostname = "0.4.3"
hex = "0.4.3"
thiserror = "1.0.40"
priority-queue = "2.0.2"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = "0.4.38"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
